@@ -1,6 +1,6 @@
 {
   "name": "simp-simp_gitlab",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "author": "SIMP Team",
   "summary": "SIMP profiles for GitLab",
   "license": "Apache-2.0",
@@ -25,7 +25,7 @@
     },
     {
       "name": "puppet/gitlab",
-      "version_requirement": ">= 6.0.1 < 9.0.0"
+      "version_requirement": ">= 6.0.1 < 10.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
@@ -37,7 +37,7 @@
     },
     {
       "name": "simp/pam",
-      "version_requirement": ">= 6.8.3 < 7.0.0"
+      "version_requirement": ">= 6.8.3 < 8.0.0"
     },
     {
       "name": "simp/pki",
