@@ -1,3 +1,6 @@
+* Wed Feb 07 2024 Mike Riddle <mike@sicura.us> - 0.12.0
+- [puppetsync] Update metadata upper bounds for puppet-nsswitch, puppet-gitlab, puppet-snmp, simp-pam, and simp-useradd
+
 * Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 0.11.0
 - [puppetsync] Add EL9 support
 
